// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryItem /> expect to render 1`] = `
<li>
  <CheckboxInput
    checked={false}
    customActiveClassName="CategoryItem__Label--active"
    customClassName="CategoryItem__Label"
    id="category-Games"
    onChange={[Function]}
    value="Games"
  >
    Games
    <span
      styleName="CategoryItem__Stat"
    >
      (
      1235
      )
    </span>
  </CheckboxInput>
</li>
`;

exports[`<CategoryItem /> expect to render when refined 1`] = `
<li>
  <CheckboxInput
    checked={true}
    customActiveClassName="CategoryItem__Label--active"
    customClassName="CategoryItem__Label"
    id="category-Games"
    onChange={[Function]}
    value="Games"
  >
    Games
    <span
      styleName="CategoryItem__Stat"
    >
      (
      1235
      )
    </span>
  </CheckboxInput>
</li>
`;
